# tree-sitter-stelf

./: CLAUDE.md  CMakeLists.txt  Cargo.toml  Cases.ml  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  fill_corpus.py  gen_corpus.py  go.mod  grammar.js  grammar.md  package-lock.json  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
.github/: copilot-instructions.md
_queries/: highlights.scm
bindings/c/: tree-sitter-stelf.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  grammar_file_test.js  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
lang/: term.js
new-tests2/pages/: abbrev-declaration.lf  about-the-twelf-project.lf  abstract-syntax.lf  ad-hoc-binding-structures.lf  adequacy.lf  admissibility-of-cut.lf  alpha-equivalence.lf  ambiguous-hyperkind.lf  ask-twelf-elf-short-answers.lf  ask-twelf-elf.lf  beta-equivalence.lf  bibliography-of-lf.lf  big-algebraic-solver.lf  bracket-abstraction.lf  c-machine-and-focusing-composition-in-machine-state.lf  c-machine-and-focusing-internalized-compositon.lf  c-machine-and-focusing.lf  cade-tutorial-basic-error-messages.lf  cade-tutorial-basics-answer.lf  cade-tutorial-basics.lf  cade-tutorial-next.lf  (+501 more)
output/: fol.stelf  js4.stelf  lam.stelf  polylam.stelf
queries/: highlight.scm  highlights.scm  injections.scm  locals.scm
scripts/: check_highlight_snapshots.py  gen_highlight_snapshots.py  gen_lf_corpus.py  refresh_corpus.py  select_lf_tests.py  stelf-snap
src/: grammar.json  node-types.json  parser.c  scanner.c
(+931 files in other folders)
